<resources>
    <string name="app_name">Grade Calculator</string>
    <string-array name="Grade">
        <item>N</item>
        <item>S</item>
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
    </string-array>
    <string-array name="Credits">
        <item>0</item>
        <item>1</item>
        <item>1.5</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="submit">Submit</string>
    <string name="credits">Credits</string>
    <string name="grade">Grade</string>
    <string name="gpa">GPA</string>
    <string name="cgpa">CGPA</string>
    <string name="credits_till_last_sem">Completed Credits</string>
    <string name="cgpa_till_last_sem">CGPA till last Sem</string>
    <string name="credits_in_this_sem">Ongoing Credits</string>
    <string name="gpa_in_this_sem">GPA in this Sem</string>
    <string name="calculate_gpa_btm_nav_icon">Calculate GPA</string>
    <string name="calculate_cgpa_btm_nav_icon">Calculate CGPA</string>
</resources>